AI-JADEDEVS4/src/objects/NE_Order_Items__c.object
<CustomObject>
    <description>NE Order Items</description>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>Cancelled Date</description>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <description>Cancelled</description>
        <label>Cancelled</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency</description>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <description>Item Name</description>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>Item Type</description>
        <label>Item Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <formula>HYPERLINK( SFDCID__c , &quot;View &quot; &amp; Item_Type__c , &quot;_self&quot;)</formula>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE Orders</description>
        <label>NE Orders</label>
        <referenceTo>NE_Orders__c</referenceTo>
        <relationshipLabel>NE Order Items</relationshipLabel>
        <relationshipName>NE_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promocode_Discount__c</fullName>
        <description>Promocode Discount</description>
        <label>Promocode Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCID__c</fullName>
        <description>SFDCID</description>
        <label>SFDCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NE Order Item</label>
    <nameField>
        <label>Order ItemID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NE Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>